// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validating rule docs > consistent-type-imports.mdx > consistent-type-imports.mdx must start with frontmatter description 1`] = `
"Incorrect

interface ButtonProps {
  onClick: () => void;
}

class Button implements ButtonProps {
  onClick = () => console.log('button!');
}

export { Button, ButtonProps };
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Type export ButtonProps is not a value and should be exported using \`export type\`.
"
`;

exports[`Validating rule docs > consistent-type-imports.mdx > consistent-type-imports.mdx must start with frontmatter description 2`] = `
"Correct

interface ButtonProps {
  onClick: () => void;
}

class Button implements ButtonProps {
  onClick = () => console.log('button!');
}

export { Button };
export type { ButtonProps };
"
`;
